refactor: Update TokenBlacklist model and authentication middleware
The code changes refactor the TokenBlacklist model and authentication middleware. This improvement enhances the security of the application by preventing the use of blacklisted tokens for authentication.

--- a/src/configs/email/welcome/welcomeEmail.html
+++ b/src/configs/email/welcome/welcomeEmail.html
@@ -85,8 +85,8 @@
           URL into your browser:
         </p>
         <p>
-          <a href="http://127.0.0.1:8000/verify-email?token={{token}}"
-            >http://127.0.0.1:8000/verify-email?token={{token}}</a
+          <a href="http://127.0.0.1:8000/verify-email/{{token}}"
+            >http://127.0.0.1:8000/verify-email/{{token}}</a
           >
         </p>
         <h2>Need Help?</h2>
