--- a/src/configs/email/forgot/forgotPassword.html
+++ b/src/configs/email/forgot/forgotPassword.html
@@ -5,6 +5,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Password Reset Request</title>
+    <style>
+      p {
+        margin-top: 1rem;
+      }
+    </style>
   </head>
   <body style="font-family: Arial, sans-serif; line-height: 1.6">
     <h2 style="color: #333">Hello {{firstName}},</h2>
@@ -18,7 +23,7 @@
       <a
         href="http://127.0.0.1:8000/reset/{{token}}"
         style="
-          background-color: #007bff;
+          background-color: #ca87f4;
           color: #fff;
           text-decoration: none;
           padding: 10px 20px;
@@ -34,5 +39,11 @@
     </p>
 
     <p>Thank you,<br />The HabitHub Team</p>
+    <img
+      src="../../../../app-logo.png"
+      alt="habithub-logo"
+      width="30px"
+      height="30px"
+    />
   </body>
 </html>
