--- a/src/configs/email/reset/resetPassword.html
+++ b/src/configs/email/reset/resetPassword.html
@@ -5,6 +5,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Password Reset Confirmation</title>
+    <style>
+      p {
+        margin-top: 1rem;
+      }
+    </style>
   </head>
   <body style="font-family: Arial, sans-serif; line-height: 1.6">
     <h2 style="color: #333">Hello {{firstName}},</h2>
@@ -13,8 +18,24 @@
 
     <p>If you did not perform this action, please contact us immediately.</p>
 
-    <p><a href="http://127.0.0.1:8000/signin">Sign in to your account</a></p>
+    <p>
+      <a
+        href="http://127.0.0.1:8000/signin"
+        background-color: #ca87f4;
+        color: #fff;
+        text-decoration: none;
+        padding: 10px 20px;
+        border-radius: 5px;
+        >Sign in to your account</a
+      >
+    </p>
 
     <p>Thank you,<br />The HabitHub Team</p>
+    <img
+      src="../../../../app-logo.png"
+      alt="habithub-logo"
+      width="30px"
+      height="30px"
+      />
   </body>
 </html>
