refactor: Update CORS configurations for multiple origins
Update the CORS configurations in the index.js file to allow requests from multiple origins. This includes adding "http://127.0.0.1:3000" as an allowed origin in addition to the existing process.env.CLIENT_URL and "http://localhost:3000". This change improves the flexibility and compatibility of the application with different environments.

--- a/src/configs/email/welcome/welcomeEmail.html
+++ b/src/configs/email/welcome/welcomeEmail.html
@@ -78,7 +78,7 @@
         </p>
         <p>
           <a
-            href="http://127.0.0.1:8000/verify-email?token={{token}}"
+            href="http://127.0.0.1:3000/verify-email?token={{token}}"
             background-color: #ca87f4;
             color: #fff;
             text-decoration: none;
@@ -92,7 +92,7 @@
           URL into your browser:
         </p>
         <p>
-          <a href="http://127.0.0.1:8000/verify-email/{{token}}"
+          <a href="http://127.0.0.1:8000/auth/verify-email/{{token}}"
             >http://127.0.0.1:8000/verify-email/{{token}}</a
           >
         </p>
