--- a/src/configs/email/forgot/forgotPassword.html
+++ b/src/configs/email/forgot/forgotPassword.html
@@ -21,7 +21,7 @@
 
     <p>
       <a
-        href="http://127.0.0.1:8000/reset/{{token}}"
+        href="http://127.0.0.1:3000/reset-password/{{token}}"
         style="
           background-color: #ca87f4;
           color: #fff;
