refactor: Update taskRouter to include email route for sending tasks
Update the taskRouter.js file to include a new route for sending tasks via email. This route allows users to send their tasks for a specific date to their email address. This feature enhances the functionality of the application by providing users with a convenient way to access their tasks outside of the application.

--- a/src/configs/email/reset/resetPassword.html
+++ b/src/configs/email/reset/resetPassword.html
@@ -9,6 +9,20 @@
       p {
         margin-top: 1rem;
       }
+      .company {
+        background-color: white;
+        display: flex;
+        text-align: left;
+        width: fit-content;
+        flex-direction: column;
+        justify-content: center;
+        align-items: start;
+        margin-top: 2rem;
+        padding: 1rem;
+      }
+      .company p {
+        margin: 0;
+      }
     </style>
   </head>
   <body style="font-family: Arial, sans-serif; line-height: 1.6">
@@ -30,12 +44,14 @@
       >
     </p>
 
-    <p>Thank you,<br />The HabitHub Team</p>
-    <img
-      src="../../../../app-logo.png"
-      alt="habithub-logo"
-      width="30px"
-      height="30px"
-      />
+    <div class="company">
+      <p>Thank you,<br />The HabitHub Team</p>
+      <img
+        src="https://media.licdn.com/dms/image/D4E0BAQGjEbyuclAkVQ/company-logo_100_100/0/1721344095827?e=1729728000&v=beta&t=IqB8V-K4rOaY0hSxOaODnzG6ao1RRp-knFiVhqqUtHo"
+        alt="habithub-logo"
+        width="30px"
+        height="30px"
+        />
+    </div>
   </body>
 </html>
