refactor: Add degree of urgency to dailyTasks.html and sort tasks by priority

--- a/src/configs/email/dailyTasks/dailyTasks.html
+++ b/src/configs/email/dailyTasks/dailyTasks.html
@@ -57,6 +57,7 @@
   <body>
     <h1>Hello {{firstName}},</h1>
     <p>Here are your tasks for {{date}}</p>
+    <p>Your tasks are listed according to their degree of urgency.</p>
     <ul>
       {{tasks}}
     </ul>
