refactor: Add degree of urgency to dailyTasks.html and improve task display
Update dailyTasks.html to include a description of the degree of urgency for tasks. Also, improve the task display by adding color coding to indicate completed and pending tasks.

--- a/src/configs/email/dailyTasks/dailyTasks.html
+++ b/src/configs/email/dailyTasks/dailyTasks.html
@@ -57,7 +57,11 @@
   <body>
     <h1>Hello {{firstName}},</h1>
     <p>Here are your tasks for {{date}}</p>
-    <p>Your tasks are listed according to their degree of urgency.</p>
+    <p>
+      Your tasks are listed according to their degree of urgency. You have
+      already completed your green colored tasks, red colored tasks are still
+      waiting to be completed.
+    </p>
     <ul>
       {{tasks}}
     </ul>
