refactor: Update dailyTasks.html to improve task display and remove unnecessary styling
Refactor the dailyTasks.html file to improve the display of tasks by removing unnecessary styling and simplifying the HTML structure. This refactor enhances the readability and maintainability of the codebase.

--- a/src/configs/email/dailyTasks/dailyTasks.html
+++ b/src/configs/email/dailyTasks/dailyTasks.html
@@ -72,8 +72,8 @@
         width="60px"
         height="60px"
       />
-      <p style="margin-top: 2px">Best regards,</p>
-      <p style="margin-top: 2px">The HabitHub Team</p>
+      <p>Best regards,</p>
+      <p>The HabitHub Team</p>
     </div>
   </body>
 </html>
