--- a/src/configs/email/dailyTasks/dailyTasks.html
+++ b/src/configs/email/dailyTasks/dailyTasks.html
@@ -13,7 +13,7 @@
         background-color: #f9f9f9;
       }
       h1 {
-        color: #4a90e2;
+        color: #c67ed2;
       }
       p {
         margin-top: 1rem;
@@ -31,7 +31,7 @@
         border-radius: 5px;
       }
       a {
-        background-color: #4a90e2;
+        background-color: #c67ed2;
         color: #fff;
         text-decoration: none;
         padding: 10px 20px;
