--- a/src/configs/email/welcome/welcomeEmail.html
+++ b/src/configs/email/welcome/welcomeEmail.html
@@ -93,7 +93,7 @@
         </p>
         <p>
           <a
-            href="http://127.0.0.1:3000/verify-email?token={{token}}"
+            href="http://127.0.0.1:3000/verify-email/{{token}}"
             background-color: #ca87f4;
             color: #fff;
             text-decoration: none;
@@ -107,8 +107,8 @@
           URL into your browser:
         </p>
         <p>
-          <a href="http://127.0.0.1:8000/auth/verify-email/{{token}}"
-            >http://127.0.0.1:8000/verify-email/{{token}}</a
+          <a href="http://127.0.0.1:3000/auth/verify-email/{{token}}"
+            >http://127.0.0.1:3000/verify-email/{{token}}</a
           >
         </p>
 
