refactor: Update authentication redirect URLs to use client URL

--- a/src/configs/email/forgot/forgotPassword.html
+++ b/src/configs/email/forgot/forgotPassword.html
@@ -38,7 +38,7 @@
 
     <p>
       <a
-        href="http://127.0.0.1:3000/reset-password/{{token}}"
+        href="{{clientUrl}}/reset-password/{{token}}"
         style="
           background-color: #ca87f4;
           color: #fff;
