--- a/src/configs/email/reset/resetPassword.html
+++ b/src/configs/email/reset/resetPassword.html
@@ -34,7 +34,7 @@
 
     <p>
       <a
-        href="http://127.0.0.1:3000/signin"
+        href="{{clientUrl}}/signin"
         background-color: #ca87f4;
         color: #fff;
         text-decoration: none;
